// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CalendarPlusIcon when asked to render renders 1`] = `
<svg
  aria-hidden="true"
  fill="none"
  height="24"
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth="2"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M8 2v4"
  />
  <path
    d="M16 2v4"
  />
  <rect
    height="18"
    rx="2"
    width="18"
    x="3"
    y="4"
  />
  <path
    d="M3 10h18"
  />
  <path
    d="M10 16h4"
  />
  <path
    d="M12 14v4"
  />
</svg>
`;

exports[`CalendarPlusIcon when asked to render with additional class renders with additional class 1`] = `
<svg
  aria-hidden="true"
  className="some-class"
  fill="none"
  height="24"
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth="2"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M8 2v4"
  />
  <path
    d="M16 2v4"
  />
  <rect
    height="18"
    rx="2"
    width="18"
    x="3"
    y="4"
  />
  <path
    d="M3 10h18"
  />
  <path
    d="M10 16h4"
  />
  <path
    d="M12 14v4"
  />
</svg>
`;
